@@ -1,3 +1,6 @@
+2005-11-02  Kazuhiko  <kazuhiko@fdiary.net>
+	* rast-register.rb: revise for rast-0.3.x.
+
 2005-10-20 peo <peo at mb.neweb.ne.jp>
 	* rss-recent.rb: support HTTP 304 response.
 
